--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"version": "1.0.0",
 	"scripts": {
-		"build:css": "tailwindcss -i src/styles.css -o src/output.css --watch"
+		"build:css": "tailwindcss -i src/styles.css -o src/output.css --watch",
+		"minify": "tailwindcss -o src/output.css --minify"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
